--- a/student-management-assignment/src/app/components/student-table/student-table.component.html
+++ b/student-management-assignment/src/app/components/student-table/student-table.component.html
@@ -11,6 +11,10 @@
     <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let student">{{ student.email }}</td>
   </ng-container>
+  <ng-container matColumnDef="branch">
+    <th mat-header-cell *matHeaderCellDef>Branch</th>
+    <td mat-cell *matCellDef="let student">{{ student.branch }}</td>
+  </ng-container>
   <ng-container matColumnDef="phone">
     <th mat-header-cell *matHeaderCellDef>Contact</th>
     <td mat-cell *matCellDef="let student">{{ student.phone }}</td>
