--- a/student-management-assignment/src/app/components/student-table/student-table.component.scss
+++ b/student-management-assignment/src/app/components/student-table/student-table.component.scss
@@ -5,6 +5,7 @@
     border-radius: 8px;
     border: none;
     padding: 8px;
+    cursor: pointer;
   }
 
   button[mat-button]{
@@ -12,6 +13,7 @@
     border: none;
     padding: 8px;
     margin-right: 8px;
+    cursor: pointer;
   }
 
   table[mat-table]{
